--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
           <h1>新着情報</h1>
           <div class="py-3"></div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item py-2 fs-5">ほげほげふがふが(2024/3/27)</li>
-            <li class="list-group-item py-2 fs-5">ほげほげふがふが(2024/3/27)</li>
-            <li class="list-group-item py-2 fs-5">ほげほげふがふが(2024/3/27)</li>
+            <li class="list-group-item py-2 fs-5">サイト公開🎉(2024/3/27)</li>
           </ul>
         </div>
       </div>
