--- a/tetudou.html
+++ b/tetudou.html
@@ -98,11 +98,11 @@
       <div class="container">
         <footer class="py-3 my-4">
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item fw-bold fs-5"><a href="#" class="nav-link px-2 text-body-secondary">ホーム</a></li>
-            <li class="nav-item fw-bold fs-5"><a href="#" class="nav-link px-2 text-body-secondary">地域情報</a></li>
-            <li class="nav-item fw-bold fs-5"><a href="#" class="nav-link px-2 text-body-secondary">施設情報</a></li>
-            <li class="nav-item fw-bold fs-5"><a href="#" class="nav-link px-2 text-body-secondary">鉄道情報</a></li>
-            <li class="nav-item fw-bold fs-5"><a href="#" class="nav-link px-2 text-body-secondary">サーバー情報</a></li>
+            <li class="nav-item fw-bold fs-5"><a href="index.html" class="nav-link px-2 text-body-secondary">ホーム</a></li>
+            <li class="nav-item fw-bold fs-5"><a href="region.html" class="nav-link px-2 text-body-secondary">地域情報</a></li>
+            <li class="nav-item fw-bold fs-5"><a href="sisetu.html" class="nav-link px-2 text-body-secondary">施設情報</a></li>
+            <li class="nav-item fw-bold fs-5"><a href="tetudou.html" class="nav-link px-2 text-body-secondary">鉄道情報</a></li>
+            <li class="nav-item fw-bold fs-5"><a href="saba.html" class="nav-link px-2 text-body-secondary">サーバー情報</a></li>
           </ul>
           <p class="text-center text-body-secondary fw-bold fs-5">SCJPマイクラ鯖</p>
         </footer>
