--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <p class="lead mb-4 fw-bold">ScJPマイクラ鯖は、設備やルールなどが充実した、愉快でフレンドリーなScratchJPユーザーが集う、Minecraftサーバーです！新規さん大歓迎🎉🎉🎉</p>
         </div>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3"　href="https://discord.com/channels/888638910589206569/1220479513071190077">ホワイトリスト申請</button>
+          <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3"  onclick="location.href="https://discord.com/channels/888638910589206569/1220479513071190077">ホワイトリスト申請</button>
         </div>
       </div>
       <!-- info -->
@@ -66,7 +66,7 @@
                 <div class="card-body">
                   <h5 class="card-title">地域情報</h5>
                   <p class="card-text">鯖内の地域情報を掲載しています。</p>
-                  <a href="#" class="btn btn-primary">地域情報</a>
+                  <a href="region.html" class="btn btn-primary">地域情報</a>
                 </div>
               </div>
             </div>
@@ -75,7 +75,7 @@
                 <div class="card-body">
                   <h5 class="card-title">施設情報</h5>
                   <p class="card-text">鯖内の施設情報を掲載しています。</p>
-                  <a href="#" class="btn btn-primary">施設情報</a>
+                  <a href="sisetu.html" class="btn btn-primary">施設情報</a>
                 </div>
               </div>
             </div>
@@ -86,7 +86,7 @@
                 <div class="card-body">
                   <h5 class="card-title">鉄道情報</h5>
                   <p class="card-text">鯖内の鉄道情報を掲載しています。</p>
-                  <a href="#" class="btn btn-primary">鉄道情報</a>
+                  <a href="tetudou.html" class="btn btn-primary">鉄道情報</a>
                 </div>
               </div>
             </div>
@@ -95,7 +95,7 @@
                 <div class="card-body">
                   <h5 class="card-title">サーバーについて</h5>
                   <p class="card-text">SCJPマイクラ鯖に関する情報を掲載しています。</p>
-                  <a href="#" class="btn btn-primary">サーバー情報</a>
+                  <a href="saba.html" class="btn btn-primary">サーバー情報</a>
                 </div>
               </div>
             </div>
