--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <p class="lead mb-4 fw-bold">ScJPマイクラ鯖は、設備やルールなどが充実した、愉快でフレンドリーなScratchJPユーザーが集う、Minecraftサーバーです！新規さん大歓迎🎉🎉🎉</p>
         </div>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3"  onclick="location.href="https://discord.com/channels/888638910589206569/1220479513071190077">ホワイトリスト申請</button>
+          <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3" onclick="location.href='https://discord.com/channels/888638910589206569/1220479513071190077'" >ホワイトリスト申請</button>
         </div>
       </div>
       <!-- info -->
