--- a/region.html
+++ b/region.html
@@ -37,8 +37,8 @@
         </div>
       </nav>
       <!-- content -->
-      <div class="text-center py-3">
-        <div class="col-lg-7 mx-auto py-4">
+<div class="text-center py-3">
+        <div class="col-lg-7 mx-auto py-4 px-1">
           <h1>地域情報</h1>
           <p>-ScJP鯖内の地域情報-</p>
           <div class="py-3"></div>
