--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
       <!-- hoge -->
       <div class="text-center py-5">
-        <div class="col-lg-7 mx-auto">
+        <div class="col-lg-7 mx-auto px-1">
           <h1>鯖内の情報</h1>
           <div class="py-3"></div>
           <div class="row">
