--- a/tetudou.html
+++ b/tetudou.html
@@ -38,7 +38,7 @@
       </nav>
       <!-- content -->
       <div class="text-center py-5">
-        <div class="col-lg-7 mx-auto">
+        <div class="col-lg-7 mx-auto px-1">
           <h1>鉄道情報</h1>
           <p>-ScJP鯖内の鉄道情報-</p>
           <div class="py-3"></div>
