--- a/sisetu.html
+++ b/sisetu.html
@@ -37,11 +37,16 @@
         </div>
       </nav>
       <!-- content -->
-      <div class="text-center py-3">
-        <div class="col-lg-7 mx-auto py-4">
-          <h1>施設情報</h1>
+            <div class="text-center py-3">
+        <div class="col-lg-7 mx-auto py-4 px-2">
+          <h1 class="py-4">施設情報の登録</h1>
+          <h4>施設情報の登録は<a href="https://docs.google.com/forms/d/e/1FAIpQLSd0Q9IHz4O82ts9F5OkzdTa5JeugaZcvJYlRc-9bBKCS0z10A/viewform">こちら</a>からお願いします。</h4>
+          <div class="py-3"></div>
+          <h1>施設情報</h1>          
           <p>-ScJP鯖内の施設情報-</p>
           <div class="py-3"></div>
+          <h2>ScJP市</h2>
+          <div class="py-2"></div>
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card">
@@ -69,8 +74,245 @@
             </div>
           </div>
           <div class="py-3"></div>
-          <h1 class="py-4">施設情報の登録</h1>
-          <h4>施設情報の登録は<a href="https://docs.google.com/forms/d/e/1FAIpQLSd0Q9IHz4O82ts9F5OkzdTa5JeugaZcvJYlRc-9bBKCS0z10A/viewform">こちら</a>からお願いします。</h4>
+
+          <h2>阿斑市</h2>
+          <div class="py-2"></div>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="py-3"></div>
+
+          <h2>乱歩村</h2>
+          <div class="py-2"></div>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="py-3"></div>
+
+          <h2>陸果町</h2>
+          <div class="py-2"></div>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="py-3"></div>
+
+          <h2>望洋市</h2>
+          <div class="py-2"></div>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="py-3"></div>
+
+          <h2>実機村</h2>
+          <div class="py-2"></div>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="py-3"></div>
+
+          <h2>ysタウン</h2>
+          <div class="py-2"></div>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="py-3"></div>
+
+          <h2>すいこん島</h2>
+          <div class="py-2"></div>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="py-3"></div>
+
+          <h2>あぁるごんアイランド</h2>
+          <div class="py-2"></div>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="NoImage.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <!-- footer -->
