--- a/saba.html
+++ b/saba.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ScJPマイクラ鯖-ホーム-</title>
+    <title>ScJPマイクラ鯖-サーバー情報-</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
   <body>
@@ -17,7 +17,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item fs-5 fw-bold">
-                <a class="nav-link active" aria-current="page" href="index.html">ホーム</a>
+                <a class="nav-link" aria-current="page" href="index.html">ホーム</a>
               </li>
               <li class="nav-item fs-5 fw-bold">
                 <a class="nav-link" aria-current="page" href="region.html">地域情報</a>
