--- a/saba.html
+++ b/saba.html
@@ -10,7 +10,7 @@
     <!-- header -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand fs-3 fw-bold text-dark px-3" href="#">ScJPマイクラ鯖</a>
+          <a class="navbar-brand fs-3 fw-bold text-dark px-3" href="index.html">ScJPマイクラ鯖</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
