--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
       <!-- info -->
       <div class="text-center">
         <div class="col-lg-7 mx-auto py-4">
-          <h1>新着情報</h1>
+          <h1>新着情報&お知らせ</h1>
           <div class="py-3"></div>
           <ul class="list-group list-group-flush">
+            <li class="list-group-item py-2 fs-5">「施設情報」から施設情報の登録をお願いします！(2024/3/28)</li>
             <li class="list-group-item py-2 fs-5">サイト公開🎉(2024/3/27)</li>
           </ul>
         </div>
