--- a/saba.html
+++ b/saba.html
@@ -39,14 +39,14 @@
       <div class="text-center py-4">
         <div class="col-lg-6 mx-auto">
           <h1>サーバー情報</h1>
-          <p>鯖主：kouhei
-            <br>エディション：統合版,Java版</p>
+          <h5>鯖主：kouhei
+            <br>エディション：統合版,Java版</h5>
           <h1>IPとポート</h1>
           <div class="py-1"></div>
-          <p>IP:114.148.57.151
+          <h5>IP:114.148.57.151
           <br>ポート(JE):25565(TCP)
           <br>ポート(BE):19132(UDP)
-          </p>
+          </h5>
           <div class="py-1"></div>
             <h1>サーバールール</h1>
         </div>
