--- a/sisetu.html
+++ b/sisetu.html
@@ -50,9 +50,9 @@
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card">
-                <img src="NoImage.png" class="card-img-top" alt="...">
+                <img src="aspoubank_001.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                  <h5 class="card-title"><a href="aspoubank_001.html">阿班銀行本店(001)</a></h5>
                 </div>
               </div>
             </div>
