--- a/aspoubank_001.html
+++ b/aspoubank_001.html
@@ -43,7 +43,7 @@
           <h1>阿班銀行本店(001)</h1>
           <img class="big-img img-fluid px-1 py-4"src="aspoubank_001.png">
         </div>
-        <div class="col-lg-3 mx-auto">
+        <div class="col-lg-3 mx-auto px-1">
           <h5>施設名：阿班銀行本店(001)
           <br>制作者：aspou2413
           <br>所在地：ScJP市
