--- a/aspoubank_001.html
+++ b/aspoubank_001.html
@@ -30,7 +30,7 @@
                 <a class="nav-link" aria-current="page" href="tetudou.html">鉄道情報</a>
               </li>
               <li class="nav-item fs-5 fw-bold">
-                <a class="nav-link active" aria-current="page" href="saba.html">サーバー情報</a>
+                <a class="nav-link" aria-current="page" href="saba.html">サーバー情報</a>
               </li>
             </ul>
           </div>
