--- a/sisetu.html
+++ b/sisetu.html
@@ -58,9 +58,9 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="NoImage.png" class="card-img-top" alt="...">
+                <img src="oneanv.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title"><a href="#">さんぷる</a></h5>
+                  <h5 class="card-title"><a href="oneanv.html">ScJP一周年記念館</a></h5>
                 </div>
               </div>
             </div>
