--- a/aspoubank_001.html
+++ b/aspoubank_001.html
@@ -48,7 +48,8 @@
           <br>制作者：aspou2413
           <br>所在地：ScJP市
           <br>種類：建物
-          <br>概要：あすぽううおおおおおおおおおおおおおおおおおおおおおおおおお</h5>
+          <br>概要：ScJP鯖で初の銀行です。アイテムを確実に保護し、万が一のことがあれば補填致します。新通貨の両替、お預け入れ、ローンも対応しております。
+</h5>
         </div>
       </div>
       <!-- footer -->
