--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 <a class="nav-link" aria-current="page" href="tetudou.html">鉄道情報</a>
               </li>
               <li class="nav-item fs-5 fw-bold">
+                <a class="nav-link" aria-current="page" href="boshu.html">募集情報</a>
+              </li>
+              <li class="nav-item fs-5 fw-bold">
                 <a class="nav-link" aria-current="page" href="saba.html">サーバー情報</a>
               </li>
             </ul>
