--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <h1>新着情報&お知らせ</h1>
           <div class="py-3"></div>
           <ul class="list-group list-group-flush">
+            <li class="list-group-item py-2 fs-5">募集情報のページを開設しました！(2024/3/31)</li>
             <li class="list-group-item py-2 fs-5">「施設情報」から施設情報の登録をお願いします！(2024/3/28)</li>
             <li class="list-group-item py-2 fs-5">サイト公開🎉(2024/3/27)</li>
           </ul>
@@ -95,6 +96,14 @@
               </div>
             </div>
             <div class="col-sm-6">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">募集情報</h5>
+                  <p class="card-text">鯖内の募集情報を掲載しています。</p>
+                  <a href="saba.html" class="btn btn-primary">サーバー情報</a>
+                </div>
+              </div>
+              <div class="col-sm-6">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">サーバーについて</h5>
