--- a/boshu.html
+++ b/boshu.html
@@ -53,7 +53,7 @@
               <div class="card">
                 <img src="NoImage.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">応募情報募集中！</h5>
+                  <h5 class="card-title">募集情報募集中！</h5>
                   <p class="card-title">募集者：
                   <br>報酬：
                   <br>募集概要：
@@ -65,7 +65,7 @@
               <div class="card">
                 <img src="NoImage.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">応募情報募集中！</h5>
+                  <h5 class="card-title">募集情報募集中！</h5>
                   <p class="card-title">募集者：
                   <br>報酬：
                   <br>募集概要：
@@ -77,7 +77,7 @@
               <div class="card">
                 <img src="NoImage.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">応募情報募集中！</h5>
+                  <h5 class="card-title">募集情報募集中！</h5>
                   <p class="card-title">募集者：
                   <br>報酬：
                   <br>募集概要：
